platforms/rec-vector/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-rec-vector
  labels:
    app: shopee-rec-vector
spec:
  type: ClusterIP
  ports:
    - port: 8101
      targetPort: http
      protocol: TCP
      name: http
    - port: 9101
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: shopee-rec-vector
